clusters/production/automation/compreface/0-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: compreface
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
