clusters/production/automation/compreface/1-db.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: db
    app.kubernetes.io/name: compreface-db
    app.kubernetes.io/instance: cf-db
    app.kubernetes.io/managed-by: flux
  name: cf-db
  namespace: compreface
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: db
        app.kubernetes.io/name: compreface-db
        app.kubernetes.io/instance: cf-db
        app.kubernetes.io/managed-by: flux
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - env:
            - name: TZ
              value: America\Toronto
            - name: POSTGRES_DB
              value: frs
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: compreface-db-credentials
                  key: POSTGRES_PASSWORD
            - name: POSTGRES_USER
              valueFrom:
                secretKeyRef:
                  name: compreface-db-credentials
                  key: POSTGRES_USER
            - name: PGDATA
              value: /var/lib/postgresql/data/pgdata
          image: postgres:11.5
          name: cf-db
          securityContext:
            allowPrivilegeEscalation: false
          ports:
          - containerPort: 5432
          readinessProbe:
            exec:
              command: ["pg_isready"]
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "512Mi"
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: cf-db-data

      restartPolicy: Always
      volumes:
        - name: cf-db-data
          persistentVolumeClaim:
            claimName: pvc-compreface-db
---
apiVersion: v1
kind: Service
metadata:
  name: compreface-postgres-db
  namespace: compreface
  labels:
    app.kubernetes.io/name: compreface-db
    app.kubernetes.io/instance: cf-db
    app.kubernetes.io/managed-by: flux
spec:
  type: ClusterIP
  selector:
      app: db
  ports:
  - port: 5432
