clusters/production/automation/compreface/2-core.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: core
    app.kubernetes.io/name: compreface-core
    app.kubernetes.io/instance: cf-core
    app.kubernetes.io/managed-by: flux
  name: cf-core
  namespace: compreface
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core
  template:
    metadata:
      labels:
        app: core
        app.kubernetes.io/name: compreface-core
        app.kubernetes.io/instance: cf-core
        app.kubernetes.io/managed-by: flux
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - env:
            - name: TZ
              value: America\Toronto
            - name: ML_PORT
              value: "3000"
          image: 'exadel/compreface-core:1.0.1'
          ports:
          - containerPort: 3000
          name: cf-core
          securityContext:
            allowPrivilegeEscalation: false
          startupProbe:
            tcpSocket:
              port: 3000
            failureThreshold: 60
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 3000
            periodSeconds: 20
          readinessProbe:
            tcpSocket:
              port: 3000
            periodSeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: "2Gi"
            limits:
              cpu: "500m"
              memory: "4Gi"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: compreface-core
  namespace: compreface
  labels:
    app.kubernetes.io/name: compreface-core
    app.kubernetes.io/instance: cf-core
    app.kubernetes.io/managed-by: flux
spec:
  type: ClusterIP
  selector:
      app: core
  ports:
  - port: 3000
