clusters/production/automation/compreface/3-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
    app.kubernetes.io/name: compreface-api
    app.kubernetes.io/instance: cf-api
    app.kubernetes.io/managed-by: flux
  name: cf-api
  namespace: compreface
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
        app.kubernetes.io/name: compreface-api
        app.kubernetes.io/instance: cf-api
        app.kubernetes.io/managed-by: flux
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - env:
            - name: TZ
              value: America\Toronto
            - name: API_JAVA_OPTS
              value: '-Xmx8g'
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: compreface-db-credentials
                  key: POSTGRES_PASSWORD
            - name: POSTGRES_URL
              value: 'jdbc:postgresql://compreface-postgres-db:5432/frs'
            - name: POSTGRES_USER
              valueFrom:
                secretKeyRef:
                  name: compreface-db-credentials
                  key: POSTGRES_USER
            - name: SAVE_IMAGES_TO_DB
              value: 'true'
            - name: SPRING_PROFILES_ACTIVE
              value: 'dev'
          image: 'exadel/compreface-api:1.0.1'
          ports:
          - containerPort: 8080
          name: cf-api
          resources:
            requests:
              cpu: "100m"
              memory: "2Gi"
            limits:
              cpu: "500m"
              memory: "4Gi"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: compreface-api
  namespace: compreface
  labels:
    app.kubernetes.io/name: compreface-api
    app.kubernetes.io/instance: cf-api
    app.kubernetes.io/managed-by: flux
spec:
  type: ClusterIP
  selector:
      app: api
  ports:
  - port: 8080
