clusters/production/automation/compreface/4-admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: admin
    app.kubernetes.io/name: compreface-admin
    app.kubernetes.io/instance: cf-admin
    app.kubernetes.io/managed-by: flux
  name: cf-admin
  namespace: compreface
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
        app.kubernetes.io/name: compreface-admin
        app.kubernetes.io/instance: cf-admin
        app.kubernetes.io/managed-by: flux
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - env:
            - name: TZ
              value: America\Toronto
            - name: ADMIN_JAVA_OPTS
              value: '-Xmx8g'
            - name: EMAIL_FROM
            - name: EMAIL_HOST
            - name: EMAIL_PASSWORD
            - name: EMAIL_USERNAME
            - name: ENABLE_EMAIL_SERVER
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: compreface-db-credentials
                  key: POSTGRES_PASSWORD
            - name: POSTGRES_URL
              value: 'jdbc:postgresql://compreface-postgres-db:5432/frs'
            - name: POSTGRES_USER
              valueFrom:
                secretKeyRef:
                  name: compreface-db-credentials
                  key: POSTGRES_USER
            - name: SPRING_PROFILES_ACTIVE
              value: 'dev'
          image: 'exadel/compreface-admin:1.0.1'
          ports:
          - containerPort: 8080
          name: cf-admin
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "2Gi"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: compreface-admin
  namespace: compreface
  labels:
    app.kubernetes.io/name: compreface-admin
    app.kubernetes.io/instance: cf-admin
    app.kubernetes.io/managed-by: flux
spec:
  type: ClusterIP
  selector:
      app: admin
  ports:
  - port: 8080
