clusters/production/automation/compreface/5-fe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fe
    app.kubernetes.io/name: compreface-fe
    app.kubernetes.io/instance: cf-fe
    app.kubernetes.io/managed-by: flux
  name: cf-fe
  namespace: compreface
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fe
  template:
    metadata:
      labels:
        app: fe
        app.kubernetes.io/name: compreface-fe
        app.kubernetes.io/instance: cf-fe
        app.kubernetes.io/managed-by: flux
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - image: 'exadel/compreface-fe:1.0.1'
          name: cf-fe
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 80
          startupProbe:
            tcpSocket:
              port: 80
            failureThreshold: 60
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 80
            periodSeconds: 20
          readinessProbe:
            tcpSocket:
              port: 80
            periodSeconds: 10
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "512Mi"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fe
    app.kubernetes.io/name: compreface-fe
    app.kubernetes.io/instance: cf-fe
    app.kubernetes.io/managed-by: flux
  name: compreface-ui
  namespace: compreface
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.241
  ports:
    - port: 8000
      targetPort: 80
  selector:
    app: fe
